# PO2020

./: .gitignore  t  task1.cpp
book/: CMakeLists.txt  Main.cpp
book/include/: A4Page.h  B5Page.h  Book.h  Page.h  TitlePage.h
book/src/: Book.cpp  Page.cpp  TitlePage.cpp
lab03/: CMakeLists.txt  lab03.cpp
lab03/include/: FilterCriteria.h  Functors.h  List.h
lab03/src/: FilterCriteria.cpp  Functors.cpp  List.cpp
lab04/: CMakeLists.txt  lab04.cpp
lab04/include/: SmartPtr.h  TestClass.h
lab04/src/: SmartPtr.cpp  TestClass.cpp
lab05/: CMakeLists.txt  lab05.cpp
lab05/include/: Division.h  Exponentiation.h  Operation.h  SumOfElements.h
lab05/src/: Division.cpp  Exponentiation.cpp  Operation.cpp  SumOfElements.cpp
lab06/: CMakeLists.txt  lab06.cpp
lab06/include/: Function.h  Math.h
lab06/src/: Math.cpp
lab07/: CMakeLists.txt  lab07.cpp
lab07/include/: ArithmeticMean.h  HarmonicMean.h
lab07/src/: ArithmeticMean.cpp  HarmonicMean.cpp
lab08/: CMakeLists.txt  lab08.cpp
lab09/: Main.h  Point.cpp  Point.h  Shapes.cpp  abstractClasses.h  lab09.cpp
lab10/: Data.cpp  Data.h  Sum.cpp  Sum.h  Table.cpp  Table.h  lab10.cpp
lab11/: Animal.h  Animals.cpp  Animals.h  Meadow.cpp  Meadow.h
lab12/: Array2D.cpp  Array2D.d  Array2D.h  BadDimsException.h  lab12.cpp  lab12.d  test
lab13/: Number.cpp  Number.h  lab13.cpp
lab14/: Factory.h  lab14.cpp
lab15/: MyArray.h  Printer.h  lab15.cpp
uniquePtr/: LabeledPoint.cpp  LabeledPoint.d  LabeledPoint.h  Point.cpp  Point.d  UniquePtr.cpp  UniquePtr.d  UniquePtr.h  lab08.d  makefile  test
(+4 files in other folders)
